Colaboratory를 통해 생성됨

--- a/Decision_Tree/DT_PlayTennis.ipynb
+++ b/Decision_Tree/DT_PlayTennis.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled9.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPnEEnVU+rODgm5tSgL9plL",
+      "authorship_tag": "ABX9TyNGrAQUFNMssH3zo5NZym3Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -147,7 +147,10 @@
         "id": "zAR7oEN5xWah"
       },
       "source": [
-        "X = np.array(pd.DataFrame(tennis_data, columns=['Outlook','Temperature', 'Humidity', 'Wind']))"
+        "# 속성과 클래스 분리\n",
+        "X = np.array(pd.DataFrame(tennis_data, columns=['Outlook','Temperature', 'Humidity', 'Wind']))\n",
+        "# 변수 tennis_data의 컬럼('Outlook','Temperature', 'Humidity', 'Wind')의 값들을 데이터프레임 형태로 추출하고\n",
+        "# np.array 함수를 이용해 추출한 데이터를 배열형태로 변환한 후 변수 X에 저장"
       ],
       "execution_count": 37,
       "outputs": []
@@ -158,7 +161,9 @@
         "id": "GPPqLDxuxenJ"
       },
       "source": [
-        "y = np.array(pd.DataFrame(tennis_data, columns=['PlayTennis']))"
+        "y = np.array(pd.DataFrame(tennis_data, columns=['PlayTennis']))\n",
+        "# 변수 tennis_data의 컬럼('PlayTennis')값을 데이터프레임 형태로 추출하고\n",
+        "# np.array 함수를 이용해 추출한 데이터를 배열형태로 변환한 후 변수 y에 저장"
       ],
       "execution_count": 38,
       "outputs": []
@@ -169,7 +174,9 @@
         "id": "64a_1R8exfLq"
       },
       "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(X,y)"
+        "X_train, X_test, y_train, y_test = train_test_split(X,y)\n",
+        "# 로드(load)된 train_test_aplit 모듈을 이용해 변수 X에 입력 4개 컬럼의 데이터와 변수 y에 입력한 PlayTennis 컬럼의 데이터를,\n",
+        "# train(훈련)과 test(테스트)로 구분해, 임의의 개수로 각각 변수 X_train, X_test, y_train, y_test에 저장"
       ],
       "execution_count": 39,
       "outputs": []
@@ -316,7 +323,8 @@
         "id": "Iy_CmJVQxpCn"
       },
       "source": [
-        "dt_clf = DecisionTreeClassifier()"
+        "dt_clf = DecisionTreeClassifier()\n",
+        "# 로드된 의사결정 트리 분류 모듈을 변수 dt_clf에 저장"
       ],
       "execution_count": 44,
       "outputs": []
@@ -327,7 +335,9 @@
         "id": "-F0XfXWdx39c"
       },
       "source": [
-        "dt_clf = dt_clf.fit(X_train, y_train)"
+        "dt_clf = dt_clf.fit(X_train, y_train)\n",
+        "# 의사결정 트리 분류 모듈이 저장된 변수 dt_clf 의 함수 fit() 에 변수 X_train, y_train 을 입력해 의사결정 트리 분류 모델을 생성\n",
+        "# 그 후, 생성한 모델을 다시 변수 dt_clf에 저장"
       ],
       "execution_count": 46,
       "outputs": []
@@ -338,7 +348,9 @@
         "id": "OUbEfy9Ax518"
       },
       "source": [
-        "dt_prediction = dt_clf.predict(X_test)"
+        "dt_prediction = dt_clf.predict(X_test)\n",
+        "# 변수 dt_clf의 함수 predict()에 변수 X_test를 입력함.\n",
+        "# 그리고 입력한 X_test에 대한 클래스 예측 값을 변수 dt_prediction에 저장"
       ],
       "execution_count": 47,
       "outputs": []
@@ -361,7 +373,10 @@
       },
       "source": [
         "feature_names = tennis_data.columns.tolist()\n",
-        "feature_names = feature_names[0:4]"
+        "feature_names = feature_names[0:4]\n",
+        "# 트리표현 함수에 입력되는 파라미터 중 하나인 feature_names에 값을 입력하기 위해,\n",
+        "# 변수 tennis_data의 각 컬럼명을 list형태로 변환한 후 변수 feature_names에 저장\n",
+        "# 저장된 변수 feature_names를 슬라이싱([0:4])해 'Outlook','Temperature', 'Humidity', 'Wind'의 컬럼명을 추출한 다음 다시 변수 feature_names에 저장"
       ],
       "execution_count": 50,
       "outputs": []
@@ -372,7 +387,9 @@
         "id": "FeYyB5Jo4Rpt"
       },
       "source": [
-        "target_name = np.array(['Play No', 'Play Yes'])"
+        "target_name = np.array(['Play No', 'Play Yes'])\n",
+        "# 트리표현 함수에 입력되는 파라미터 중 하나인 class_name에 값을 입력하기 위해,\n",
+        "# Target_class 값인 'Play No'와 'Play Yes'를 배열형태로 변수 target_name에 저장"
       ],
       "execution_count": 51,
       "outputs": []
@@ -387,7 +404,13 @@
         "                                  feature_names = feature_names,\n",
         "                                  class_names = target_name,\n",
         "                                  filled = True, rounded = True,\n",
-        "                                  special_characters = True)"
+        "                                  special_characters = True)\n",
+        "# Tree 패키지 중 의사결정 트리를 dot 형식으로 내보내는 함수인 export_graphviz() 를 이용해 트리 표현을 변수 dt_dot_data 에 저장\n",
+        "# dt_clf는 의사결정 트리 분류기, out_file은 의사결정 트리를 파일 또는 문자열로 반환(기본: tree.dot, None일 경우 문자열로 반환)\n",
+        "# feature_names는 각 features의 이름, class_names는 각 대상 class의 이름을 오름차순으로 정렬\n",
+        "# filled = True일 경우 분류를 위한 다수 클래스, 회귀 값의 극한 또는 다중 출력의 노드 순도를 나타내기 위해 노드를 색칠\n",
+        "# rounded = True일 경우 둥근 모서리가 있는 노드 상자를 그리고, Times-Roman 대신 Helvetica 글꼴을 사용한다.\n",
+        "# special_characters = True일 경우 특수 문자 표시"
       ],
       "execution_count": 52,
       "outputs": []
@@ -398,7 +421,9 @@
         "id": "70suhxos4VPv"
       },
       "source": [
-        "dt_graph = pydotplus.graph_from_dot_data(dt_dot_data)"
+        "dt_graph = pydotplus.graph_from_dot_data(dt_dot_data)\n",
+        "# Pydotplus 모듈 중 dot 형식의 데이터로 정의된 그래프를 로드(load)하는 함수인 grap_from_dot_data() 에\n",
+        "# 변수 dt_dot_data를 입력한 후 다시 변수 dt_graph에 저장"
       ],
       "execution_count": 54,
       "outputs": []
@@ -414,7 +439,9 @@
         "outputId": "11ef36c3-d36c-463b-8bf9-e4c908acb138"
       },
       "source": [
-        "Image(dt_graph.create_png())"
+        "Image(dt_graph.create_png())\n",
+        "# 변수 dt_graph에 대한 정보를 png 파일로 생성하는 함수 create_png() 를 사용한 후,\n",
+        "# 이미지 객체를 만드는 Image 모듈을 통해 ipython 내에서 그래프를 표현"
       ],
       "execution_count": 55,
       "outputs": [
